add nav bar, word list change version number

--- a/demo_extension/manifest.json
+++ b/demo_extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "WordTube",
-  "version": "0.0.1-Snapshot",
+  "version": "0.0.1",
   "manifest_version": 3,
   "permissions": ["storage"],
   "background": {
